[tool.poetry]
name = "rokcarl-salesforce"
version = "0.2.0"
description = ""
authors = ["Rok Carl <rokcarl@gmail.com>"]
readme = "README.md"
packages = [{include = "rokcarl_salesforce"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
